--- a/css/common.css
+++ b/css/common.css
@@ -5,9 +5,12 @@ html, body {height:100%; width:100%; background:url(../images/back.png)no-repeat
 #wrap * {box-sizing: border-box;}
 
 
-.m_title {font-size:47pt; padding-top:300px; text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);} /* 타이틀 부분*/
-.m_btn {width:600px; margin:120px auto 0px; overflow: hidden;} /*버튼 범위 조정 */
-.m_btn fieldset {margin-bottom:20px;}
-.m_btn fieldset select {padding:15px 10px 15px 10px; width:196px; border-radius: 5px; background:rgba(0, 0, 0, 0.7); color:#fff;font-size: 18px;}
-.m_btn fieldset button {margin-top:20px; padding:15px 18px; background:rgba(0, 22, 84, 0.7); border:0px; font-size:18px; color:#fff; border-radius:5px; width:100%;}
-.bottomText {position:absolute; bottom:80px; width:100%; text-align: center; color:#404040; font-weight: bold; font-size:20px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)}
+.m_title {font-size:50pt; padding-top:300px; text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);} /* 타이틀 부분 조정 */
+.m_btn {width:600px; margin:65px auto 0px; overflow: hidden;} /*버튼 범위 조정 */
+.m_btn fieldset {margin-bottom:50px;}
+.m_btn fieldset select {padding:15px 10px 15px 10px; width:197.4px; border-radius: 8px; background:rgba(0, 0, 0, 0.7);
+                         color:#fff;font-size: 15px;font-weight: bold;} /* 선택버튼조정 */
+.m_btn fieldset button {margin-top:20px; padding:12px 18px; background:rgba(0, 22, 84, 0.7); border:0px; font-size:20px;
+                         color:#fff; border-radius:8px; width:100%;} /* 다운로드버튼 조정 */
+.bottomText {position:absolute; bottom:10%; width:100%; text-align: center; color:#404040; font-weight: 100;
+             font-size:25px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)} /* 지원문구 조정 */
